src/ui/Header/Header.module.css
.header {
  position: fixed;
  background-color: var(--color-background);
  top: 0;
  left: 0;
  z-index: var(--dimen-header-z-index);
  height: var(--dimen-header-height);
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header > button {
  display: flex;
  margin-left: 16px;
}

.header svg,
.drawer svg {
  fill: var(--color-text);
  height: var(--dimen-icon-primary);
  width: var(--dimen-icon-primary);
}

.title {
  margin-left: 16px;
}

.header, .drawer {
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.75);
}

.drawer {
  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--dimen-drawer-z-index);
  height: 100%;
  width: 0%;
  transform: translateX(calc(-1 * var(--dimen-drawer-width)));
  transition: all 0.3s ease;
  background-color: var(--color-background);
}

.drawer[data-open='open'] {
  width: var(--dimen-drawer-width);
  min-width: var(--dimen-drawer-width);
  transform: translateX(0px);
}

.drawer + main {
  transition: filter 0.3s ease;
  filter: blur(0px);

}
.drawer[data-open='open'] + main {
  filter: blur(4px);
  overflow: hidden;
  pointer-events: none;
}

.drawer ul {
  margin: 0;
  padding: 0;
}

.drawer button {
  width: 100%;
}

.drawer button,
.drawer a {
  display: flex;
  align-items: center;
  height: var(--dimen-header-height);
  padding: 16px;
  border-bottom: solid 1px var(--color-background-light);
}

.drawer button:focus,
.drawer button:hover,
.drawer a:hover,
.drawer a:focus {
  color: var(--color-background);
  background-color: var(--color-accent);
}

.drawer button:focus svg,
.drawer button:hover svg {
  fill: var(--color-background);
}

